# Radical-Accessibility-Toolkit

./: .gitignore  .mcp.json.example  ACADIA_LITERATURE_REVIEW.md  ACADIA_PAPER_IDEAS.md  CLAUDE.md  CLAUDE_CODE_BEST_PRACTICES.md  CLAUDE_CODE_SCREEN_READER_SETUP.md  DESIGN_SESSION.md  MANUAL.docx  MANUAL.md  Project Overview Draft.md  README.md  ROADMAP_2026-02-24.md  STARTUP.md  audit_engine.py  controller_cli.py  mcp_server.py  run_tests.py  setup.py  skill_engine.py  state.json  tactile_print.py
.claude/: settings.json
3d-print/: test_single_bay_stl.py
CLI JIG TEST/: HOW_THE_MCP_WORKS.md  TEST_MANUAL.md  mcp_server.py  rhino_bridge.py  rhino_watcher.py  simple_corridor_controller.py
_design/: 00-context.md  01-cli-controller.md  01-mcp-server.md  01-output-channels.md  01-overview.md  01-rhino-watcher.md  02-conceptual-brief.md  03-01-problem-and-success.md  03-02-core-abstractions.md  03-03-data-contracts.md  03-04-provider-layer.md  03-05-mcp-surface.md  03-06-agent-loop.md  03-07-rhino-boundary.md  03-08-output-channels.md  03-09-open-questions.md  03-10-migration.md  RAP-rewrite-design-v2.docx  RAP-rewrite-design-v2.md  RAP-rewrite-design.docx  RAP-rewrite-design.md
controller/: auditor.py  braille.py  changes.jsonl  controller_cli.py  design-intent.md  eval-results.json  exporter.py  io_utils.py  macro_manager.py  mcp_server.py  output.py  parsing.py  requirements.txt  session-context.json  skill_manager.py  state_manager.py  style_manager.py
docs/: ACADIA_BRAINSTORM_REARRANGED.md  ACADIA_FRESH_THOUGHTS.md  ACADIA_LITERATURE_REVIEW.md  ACADIA_PAPER_EXAMPLE_V1.md  ACADIA_PAPER_EXAMPLE_V2.md  ACADIA_PAPER_EXAMPLE_V3.md  ACADIA_PAPER_EXAMPLE_V4.md  ACADIA_PAPER_EXAMPLE_V5.md  ACADIA_PAPER_EXAMPLE_V6.md  ACADIA_PAPER_IDEAS_V1.md  ACADIA_PAPER_OUTLINES.md  ACADIA_PAPER_REVIEW.md  FACULTY_GUIDE.md  HOW_THE_MCP_WORKS.md  MANUAL.md  MCP_GUIDE.md  MCP_V3_MANUAL.md  OPERATIONS.md  PHONE_APP_IDEAS.md  TEST_MANUAL.md  WORKING_DOCUMENT_Summer2025.md  cross-platform-audit.md
harness/: README.md  mcp_server.py  settings.example.json
layout-jig/: MANUAL.docx  MANUAL_UPDATE_NOTES.md  MCP_GUIDE.md  mcp_server.py  rhino_watcher.py
mcp/: mcp_server.py
patterns/: ARCHITECTURAL_TACTILE_GUIDELINES.md
rap-may-15/: .mcp.json.example  CLAUDE.md  README.md  setup.py
rhino/: rhino_watcher.py
rhino-python-driver/: rhino_watcher.py  state.json  tactile_print.py
runtime/: __init__.py  config.py  health.py  launcher.py
scripts/: update.sh
services/: README.md  com.rap.mcp-server.plist  install-windows-service.ps1
skills/: README.md
sonsbeek-demo/: README.md  generate_sonsbeek.py  generate_state.py  sonsbeek.json  sonsbeek_state.json  viewer.html
tactile/: image_to_piaf.py  image_to_piaf_history.json  mcp_server.py
tests/: SMOKE_TEST_CHECKLIST.md  run_tests.py  smoke_test.sh  test_cross_platform.py  test_new_subsystems.py  test_oblique.py  test_style_system.py
tools/model-reader/: mcp_entry.py  pyproject.toml
tools/model-reader/src/model_reader/: __init__.py  cli.py
tools/model-reader/src/model_reader/core/: describer.py  exporter.py  hatches.py  reader.py  slicer.py
tools/model-reader/src/model_reader/mcp_server/: server.py  tools.py
tools/model-reader/src/model_reader/utils/: logger.py
tools/tact/: README.md  mcp_entry.py  pyproject.toml
tools/tact/src/tact/: __init__.py  cli.py
tools/tact/src/tact/config/: __init__.py  presets.py  standards_loader.py
tools/tact/src/tact/core/: __init__.py  braille_converter.py  contrast.py  converter.py  easyocr_detector.py  label_scaler.py  pdf_generator.py  processor.py  text_detector.py  tiler.py
tools/tact/src/tact/data/: tactile_standards.yaml
tools/tact/src/tact/mcp_server/: __init__.py  server.py  tools.py
tools/tact/src/tact/utils/: __init__.py  logger.py  validators.py
tools/tact/src/tactile_core/: __init__.py  cli.py
tools/tact/src/tactile_core/config/: __init__.py
tools/tact/src/tactile_core/core/: __init__.py  braille_converter.py  contrast.py  converter.py  dithertone.py  easyocr_detector.py  label_scaler.py  oblique_renderer.py  pdf_generator.py  processor.py  state_renderer.py  text_detector.py  tiler.py
tools/tact/src/tactile_core/data/: presets.yaml
tools/tact/src/tactile_core/mcp_server/: __init__.py  server.py  tools.py
tools/tact/src/tactile_core/utils/: __init__.py  cache.py
tools/tasc/: README.md  pyproject.toml
tools/tasc/src/tasc/: __init__.py  cli.py
tools/tasc/src/tasc/core/: exporter.py  feedback.py  model.py  validation.py
tools/tasc/src/tasc/dsl/: api.py
tools/tasc/src/tasc/rhino/: commands.py  connector.py
tools/tasc/src/tasc_core/: __init__.py  cli.py
tools/tasc/src/tasc_core/config/: programs.yaml
tools/tasc/src/tasc_core/core/: exporter.py  feedback.py  model.py  validation.py
tools/tasc/src/tasc_core/dsl/: api.py
tools/tasc/src/tasc_core/rhino/: commands.py  connector.py  protocol.py
tools/tasc/tests/: test_cli.py  test_model.py  test_rhino_connector.py  test_validation.py
tools/webcam-dither/: README.md  pyproject.toml
tools/webcam-dither/browser/: index.html  photo.html
tools/webcam-dither/src/webcam_dither/: __init__.py  cli.py  dither_engine.py  export.py  webcam.py
tools/webcam-dither/src/webcam_dither/core/: capture.py  dithertone.py  export.py
tools/webcam-dither/src/webcam_dither/utils/: logger.py
tools/webcam-dither/tests/: test_dithertone.py
web-viewer/: capture.js  index.html  package.json  style.css  svg-renderer.js  viewer.js  (+1 more)
(+197 files in other folders)
