[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tactile-core"
version = "1.0.0"
description = "Convert images to tactile-ready formats for PIAF printing - accessible architectural graphics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Radical Accessibility Project" }
]
keywords = [
    "accessibility",
    "tactile",
    "PIAF",
    "braille",
    "architecture",
    "blind",
    "low-vision",
    "graphics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "reportlab>=4.0.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
]
tesseract = [
    "pytesseract>=0.3.10",
]
pdf = [
    "pdf2image>=1.16.0",
]
mcp = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tact = "tactile_core.cli:main"
tact-mcp = "tactile_core.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/johnnysclark/Radical-Accessibility-Toolkit"
Documentation = "https://github.com/johnnysclark/Radical-Accessibility-Toolkit/tree/master/tools/tact"
Repository = "https://github.com/johnnysclark/Radical-Accessibility-Toolkit"

[tool.hatch.build.targets.wheel]
packages = ["src/tactile_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build]
include = [
    "src/tactile_core/**/*.py",
    "src/tactile_core/data/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
