[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasc-core"
version = "0.1.0"
description = "Tactile Architecture Scripting Console - accessible programmatic Rhino design"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Radical Accessibility Project" },
]
dependencies = [
    "click>=8.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "rhino3dm>=8.0.0",
    "tactile-core>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[project.scripts]
tasc = "tasc_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tasc_core"]

[tool.hatch.build.targets.sdist]
include = ["src/tasc_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
